--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-md-5 offset-4 mt-5 text-center">
           <div class="input-group mb-3">
-            <input type="text" class="form-control input-keyword search-key" placeholder="Search Movies">
+            <input type="text" class="form-control input-keyword value-input" placeholder="Search Movies">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary search-button" type="button" id="button-addon2">Search</button>
             </div>
